Подредактировал код согласно замечаниям